--- a/Kubernetes-Manifests-file/ingress.yaml
+++ b/Kubernetes-Manifests-file/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca,subnet-0ccca36474902829a"
+    alb.ingress.kubernetes.io/subnets: "subnet-00541e6791cae907e,subnet-0ffd93b2f9b78bcdb"
 spec:
   ingressClassName: alb
   rules:
