--- a/Kubernetes-Manifests-file/ingress.yaml
+++ b/Kubernetes-Manifests-file/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    # - host: k8s-threetie-mainlb-1dd958d0ec-1972088695.us-east-1.elb.amazonaws.com
+    - host: 
       http:
         paths:
           - path: /api
